--- a/app/static/styles/propuestas.css
+++ b/app/static/styles/propuestas.css
@@ -18,10 +18,13 @@ h1 {
 }
 
 .fotos-prop {
-    width: 200px;
     margin: 10px;
     box-shadow: 1px 0px 4px 4px rgba(0, 0, 0, 0.479);
     border-radius: 10px;
+    max-width: 200px; 
+    max-height: 200px; 
+    width: auto; 
+    height: auto; 
 }
 
 main {
@@ -41,6 +44,8 @@ main {
 .cont-form {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 h3 {
